Revert demo orchestrator config

--- a/docker/netbox/netbox.env
+++ b/docker/netbox/netbox.env
@@ -1,5 +1,5 @@
 CORS_ORIGIN_ALLOW_ALL=True
-CSRF_TRUSTED_ORIGINS="http://netbox.demo.workfloworchestrator.org http://localhost:8000 http://localhost:8080"
+CSRF_TRUSTED_ORIGINS="http://localhost:8000 http://localhost:8080"
 DB_HOST=postgres
 DB_NAME=netbox
 DB_PASSWORD=nwa
@@ -30,14 +30,10 @@ REDIS_INSECURE_SKIP_TLS_VERIFY=false
 REDIS_PASSWORD=nwa
 REDIS_SSL=false
 RELEASE_CHECK_URL=https://api.github.com/repos/netbox-community/netbox/releases
-SECRET_KEY="NNV%+&Bv8=3ILWDDMu1^Uc&wUUrTfc*1@QNN5L)^xl@NF_jJ1@"
-SKIP_SUPERUSER=true
+SECRET_KEY=r8OwDznj!!dci#P9ghmRfdu1Ysxm0AiPeDCQhKE+N_rClfWNjN
+SKIP_SUPERUSER=false
 SUPERUSER_NAME=admin
 SUPERUSER_PASSWORD=admin
 SUPERUSER_API_TOKEN=e744057d755255a31818bf74df2350c26eeabe54
 WEBHOOKS_ENABLED=true
-BANNER_LOGIN="This netbox will be wiped every week. Username and password are: admin:admin"
-BANNER_TOP="This netbox will be wiped every week"
-LOGIN_REQUIRED=true
-DB_WAIT_DEBUG=1
 
