--- a/docker/orchestrator-ui/orchestrator-ui.env
+++ b/docker/orchestrator-ui/orchestrator-ui.env
@@ -1,16 +1,16 @@
-ENVIRONMENT_NAME="Demo Orchestrator"
+ENVIRONMENT_NAME="Example Orchestrator"
 
-ORCHESTRATOR_API_HOST=http://demo.workfloworchestrator.org
+ORCHESTRATOR_API_HOST=http://localhost:8080
 ORCHESTRATOR_API_PATH=/api
-ORCHESTRATOR_GRAPHQL_HOST=http://demo.workfloworchestrator.org
+ORCHESTRATOR_GRAPHQL_HOST=http://localhost:8080
 ORCHESTRATOR_GRAPHQL_PATH=/api/graphql
 NEXTAUTH_SECRET=ToDo
 
 USE_WEB_SOCKETS=true
 USE_THEME_TOGGLE=true
 SHOW_WORKFLOW_INFORMATION_LINK=true
-WORKFLOW_INFORMATION_LINK_URL="http://workfloworchestrator.org/"
-ORCHESTRATOR_WEBSOCKET_URL="ws://demo.workfloworchestrator.org/api/ws/events"
+WORKFLOW_INFORMATION_LINK_URL="https://workfloworchestrator.org/"
+ORCHESTRATOR_WEBSOCKET_URL="ws://localhost:8080/api/ws/events"
 
 OAUTH2_CLIENT_ID=""
 OAUTH2_CLIENT_SECRET=""
