--- a/docker/orchestrator/orchestrator.env
+++ b/docker/orchestrator/orchestrator.env
@@ -9,3 +9,10 @@ OAUTH2_ACTIVE=False
 LSO_PLAYBOOK_URL=http://example-orchestrator-lso-1:8000/api/playbook
 ORCHESTRATOR_URL=http://example-orchestrator-orchestrator-1:8080
 FEDERATION_ENABLED=True
+CACHE_URI=redis://:nwa@redis:6379/0
+
+# Uvicorn worker processes: increase this in production
+UVICORN_WORKERS=2
+
+# Directory inside the container to optionally run with a different orchestrator-core version
+CORE_OVERRIDE=/home/orchestrator/orchestrator-core
