Possibly fix demo orchestrator config

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
     # Default server block
     server {
         listen 80 default_server;
-        server_name _;
+        server_name demo.workfloworchestrator.org;
 
         # General proxy settings
         proxy_set_header Host $http_host;
@@ -42,7 +42,7 @@ http {
         }
 
         location /api/ws/events {
-           proxy_pass  http://orchestrator-api:8080;
+           proxy_pass  http://orchestrator:8080;
            proxy_set_header Upgrade $http_upgrade;
            proxy_set_header Connection "Upgrade";
            proxy_set_header Sec-WebSocket-Protocol $http_sec_websocket_protocol;
@@ -58,7 +58,7 @@ http {
         }
 
         location /api {
-           proxy_pass  http://orchestrator-api:8080;
+           proxy_pass  http://orchestrator:8080;
         }
 
         location / {
