--- a/alembic.ini
+++ b/alembic.ini
@@ -6,8 +6,7 @@ file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(rev)s_%%(slug)s
 
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
-# revision_environment = false
-script_location = migrations
+script_location = %(here)s/migrations
 version_locations = %(here)s/migrations/versions/schema
 # Logging configuration
 [loggers]
