--- a/docker/orchestrator-ui/orchestrator-ui.env
+++ b/docker/orchestrator-ui/orchestrator-ui.env
@@ -19,3 +19,5 @@ NEXTAUTH_PROVIDER_NAME=""
 NEXTAUTH_AUTHORIZATION_SCOPE_OVERRIDE=""
 OIDC_CONF_FULL_WELL_KNOWN_URL=""
 OAUTH2_ACTIVE=false
+AO_STACK_STATUS_URL=""
+ENABLE_AO_STACK_STATUS=false
