Use uv instead of pip, bump core from 4.0.4 to 4.4.0rc3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,7 +179,8 @@ services:
       - ./graphql_federation.py:/home/orchestrator/graphql_federation.py
       - ./utils:/home/orchestrator/utils
       - ./services:/home/orchestrator/services
-      - ./requirements.txt:/home/orchestrator/requirements.txt
+      - ./pyproject.toml:/home/orchestrator/pyproject.toml
+      - ./uv.lock:/home/orchestrator/uv.lock
       - ./alembic.ini:/home/orchestrator/alembic.ini
       - ./translations:/home/orchestrator/translations
       - ./templates:/home/orchestrator/templates
