--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ export PYTHONUNBUFFERED=1
 export OAUTH2_ACTIVE=0
 export LOG_LEVEL=DEBUG
 export WEBSOCKET_BROADCASTER_URL="redis://localhost:6379"
+# export COMPOSE_PROFILES=lso # unhash the start of this line to also start up lso container
