fix: apply proposed fixes from @rvhonorato

--- a/ansible/plays_and_roles/create_node.yaml
+++ b/ansible/plays_and_roles/create_node.yaml
@@ -1,5 +1,6 @@
 - name: Deploy config on a nokia node
   hosts: all
+  gather_facts: no
   vars:
    ansible_network_os: nokia.srlinux.srlinux
    ansible_connection: ansible.netcommon.httpapi
