--- a/docker/lso/lso.env
+++ b/docker/lso/lso.env
@@ -2,7 +2,7 @@
 
 # Ansible configuration
 ANSIBLE_PLAYBOOKS_ROOT_DIR="/app/demo/ansible/playbooks"
-ANSIBLE_COLLECTIONS_PATH="/app/demo/ansible"
+ANSIBLE_COLLECTIONS_PATH="/app/demo/ansible/ansible_collections"
 ANSIBLE_HOST_KEY_CHECKING: "False"
 
 # Executor configuration
