Support for search/agent features in the core package

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ export PYTHONUNBUFFERED=1
 export OAUTH2_ACTIVE=0
 export LOG_LEVEL=DEBUG
 export WEBSOCKET_BROADCASTER_URL="redis://localhost:6379"
+
+export OPENAI_API_KEY=None
+export AGENT_ENABLED=False
+export SEARCH_ENABLED=False
