--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
+[project]
+name = "example-orchestrator"
+version = "1.0.0"
+requires-python = ">=3.11"
+dependencies = [
+    "orchestrator-core==4.4.0rc3",
+]
+
 [tool.black]
 line-length = 120
 
