--- a/docker/embeddings/embeddings.env
+++ b/docker/embeddings/embeddings.env
@@ -3,6 +3,7 @@
 
 OPENAI_BASE_URL=http://embeddings:80/v1
 EMBEDDING_DIMENSION=384
+EMBEDDING_MAX_BATCH_SIZE=32 # Not required when using OpenAI
 
 # Alternative: Uncomment below to use OpenAI embeddings instead
 # (Requires OPENAI_API_KEY in your .env file)
