--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ x-netbox: &netbox
 services:
   postgres:
     container_name: postgres
-    image: "postgres:17-alpine"
+    image: "pgvector/pgvector:pg17"
     ports:
       - "5432:5432"
     environment:
