--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ line-length = 120
 
 [tool.isort]
 profile = "black"
+line_length = 120
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
@@ -47,7 +48,7 @@ exclude = [
 ]
 
 # Same as Black.
-line-length = 88
+line-length = 120
 indent-width = 4
 
 # Assume Python 3.9
