Remove OrchestratorVlanRanges and use VlanRanges

--- a/docker/orchestrator-ui/orchestrator-ui.env
+++ b/docker/orchestrator-ui/orchestrator-ui.env
@@ -21,3 +21,4 @@ OIDC_CONF_FULL_WELL_KNOWN_URL=""
 OAUTH2_ACTIVE=false
 AO_STACK_STATUS_URL=""
 ENABLE_AO_STACK_STATUS=false
+ACTIVATE_PYDANTIC_FORMS=true
